New features:
- Added support for torch.nn.Hardshrink torch.nn.Softplus, torch.nn.Softshrink