@@ -1,2 +1,5 @@
 New features:
 - Added support for torch.nn.Hardshrink torch.nn.Softplus, torch.nn.Softshrink
+
+- Add support for the following random sampling operations:
+    torch.bernoulli, torch.distributions.Bernoulli
